fixed footer on small screens

--- a/style.css
+++ b/style.css
@@ -177,6 +177,22 @@ footer p {
       float: right;
       display: block;
     }
+    .footleft {
+      float: none;
+      margin-left: 0;
+    }
+    .footright {
+      float: none;
+      margin-right: 0;
+    }
+    .footleft a {
+      display: block;
+      text-align: center;
+    }
+    .footright a {
+      display: block;
+      text-align: center;
+    }
   }
   
 /* The "responsive" class is added to the topnav with JavaScript when the user clicks on the icon. This class makes the topnav look good on small screens (display the links vertically instead of horizontally) */
